--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2"
   }
 }
